Реализация кеша на SoftReference [#1592 #310046]